# repo2kernel

./: LICENSE  README.md  main.py  pyproject.toml
lib/: __init__.py  environment.yml
lib/contentproviders/: dataverse.py
lib/project/: base.py  conda.py  julia.py  python.py  r.py
